--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -11,6 +11,10 @@ table {
 table, tr, td {
   border: 1px solid black;
 }
+
+table2, tr, td {
+  border: 0px solid black;
+}
  
 	.menu-kelompok2{
 		background-color: #1e2126;
